--- a/styles/style.css
+++ b/styles/style.css
@@ -10,17 +10,17 @@ body{
     margin: 7vw;
     background-color: hsl(13, 31%, 94%);
 }
-h1{
+h1, h3{
     color: hsl(14, 65%, 9%);
 }
 h2{
     color: hsl(14, 86%, 42%);
 }
-.products-list div{
+.products-list .product-card{
     position: relative;
     display: inline-block;
 }
-.products-list div img{
+.desert-img{
     display: block;
     width: 100%;  
     height: auto;
@@ -28,7 +28,7 @@ h2{
     overflow: hidden;
 }
 
-.products-list div button{
+.products-list .product-card button{
     width: 150px;
     height: 40px;
     border-radius: 20px;
@@ -53,7 +53,7 @@ h2{
     font-size: 0.9rem;
     margin-bottom: 2px;
 }
-.products-list div p:nth-child(4){
+.products-list div h3{
     margin-top: 2px;
     font-weight: 600;
     color: hsl(14, 65%, 9%);
@@ -82,4 +82,98 @@ h2{
 .cart .content p {
     color: hsl(12, 20%, 44%);
     font-weight: 600;
+}
+
+.add-to-cart-btn{
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    align-items: center;
+}
+
+.add-to-cart-btn .minus-btn, .plus-btn{
+    width: 15px;
+    height: 15px;
+}
+
+.add-to-cart-btn .counter{
+    color: aliceblue;
+    align-items: center;
+    justify-content: center;
+}
+.cart-element{
+    align-self: flex-start;
+    width: 100%;
+    position: relative;
+    border-bottom: 1px solid hsl(14, 25%, 72%);
+    padding-bottom: 20px;
+}
+
+.cart-element p{
+    color: hsl(14, 65%, 9%)!important;
+    font-weight: 600;
+}
+
+.cart-element :nth-child(2){
+    color: hsl(14, 86%, 42%);
+    font-weight: 600;
+    margin-right: 4vw;
+}
+.cart-element :nth-child(1){
+    margin-bottom: 3vw;
+}
+.cart-element :nth-child(3){
+    color: hsl(14, 25%, 72%);
+    font-weight: 400;
+    margin-right: 1vw;
+}
+
+.cart-element :nth-child(4){
+    color: hsl(14, 65%, 9%);
+    font-weight: 600;
+    margin-right: 1vw;
+}
+
+.remove-btn{
+    pointer-events: auto;
+    position: absolute;
+    right: 60px;
+    bottom: 35px;
+    width: 15px;
+    height: 15px;
+    background: none;
+    background-image: url("../assets/images/icon-remove-item.svg");
+    background-repeat:no-repeat;
+    background-position: center;
+    background-size: 10px;
+    padding: 10px;
+    border: none;
+    border: 1px solid hsl(14, 25%, 72%);
+    border-radius: 30px;
+}
+
+.ord-total{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    align-items: center;
+}
+
+
+.ord-total :nth-child(2){
+    color: hsl(14, 65%, 9%) !important;
+    font-size: 22px;
+}
+
+#submit{
+    width: 240px;
+    height: 45px;
+    border-radius: 20px;
+    border: none;
+    font-weight: 600;
+    color: aliceblue;
+    background-color: hsl(14, 86%, 42%);
 }
