--- a/styles/style.css
+++ b/styles/style.css
@@ -177,3 +177,115 @@ h2{
     color: aliceblue;
     background-color: hsl(14, 86%, 42%);
 }
+
+#conc{
+  position:fixed;
+  bottom: 0px; /* This should place it 20px from the bottom */
+  left: 50%;
+  transform: translateX(-50%);
+  top: auto; /* This ensures it doesn't stick to the top */
+  width: 100%;
+  max-width: 600px;
+  border: none;
+  border-top-right-radius: 50px;
+  border-top-left-radius: 50px;
+  background-color: hsl(20, 50%, 98%);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  padding: 15px;
+  z-index: 1000;
+  margin: 0;
+}
+#conc .container{
+    margin: 20px;
+}
+
+.dheader h1{
+    color: hsl(14, 65%, 9%);
+    margin-bottom: 0px;
+}
+
+.dheader p{
+    color: hsl(7, 20%, 60%);
+    margin-top: 5px;
+    margin-bottom: 50px;
+}
+
+.conclusion{
+    padding: 30px;
+    background-color: hsl(13, 31%, 94%);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.order-element :nth-child(2){
+    color: hsl(14, 86%, 42%);
+    font-weight: 600;
+    margin-right: 4vw;
+}
+.order-element :nth-child(1){
+    font-weight: 600;
+    color: hsl(14, 65%, 9%);
+}
+.order-element :nth-child(3){
+    color: hsl(14, 25%, 72%);
+    font-weight: 400;
+    margin-right: 1vw;
+}
+
+.order-element :nth-child(4){
+    color: hsl(14, 65%, 9%);
+    font-weight: 600;
+    margin: 0;
+    position: absolute;
+    right: 30px;
+    bottom: 35px;
+}
+
+.order-element{
+    position: relative;
+    margin-bottom: 30px;
+    border-bottom: 1px solid hsl(14, 25%, 72%);
+    padding: 20px;
+}
+
+.final-cost{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 30px;
+}
+.final-cost :nth-child(2){
+    color: hsl(14, 65%, 9%) !important;
+    font-size: 22px;
+    font-weight: 600;
+}
+
+#new{
+    padding: 20px;
+    background-color: hsl(14, 86%, 42%);
+    font-weight: 500;
+    color: aliceblue;
+    font-size: 14px;
+    border-radius: 20px;
+}
+
+@media screen and (min-width: 1000px){
+    .products-list{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    .products-list div{
+        margin: 10px;
+    }
+    body{
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        gap: 20px;
+    }
+    .cart{
+        height: fit-content;
+    }
+}
